# kata_bst_client_server

./: CMakeLists.txt  README.md  lizardfs-chunkserver_3.13.0_amd64.deb
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.h  client_utils.cpp  client_utils.h  main.cpp  server.cpp  server.h
src/lib/: CMakeLists.txt  bst.cpp  bst.h  socket.cpp  socket.h
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
test/: CMakeLists.txt  client_test.cpp  lib_test.cpp  server_test.cpp
